--- a/FL13_HW2/homework/css/style.css
+++ b/FL13_HW2/homework/css/style.css
@@ -25,7 +25,7 @@
 		letter-spacing: 5px;
 		word-spacing: 8px;
 		text-shadow: 0px 10px 2px rgba(0, 0, 0, 0.25), 0px 3px 1px rgba(0, 0, 0, 0.25);
-		animation: rotate 4s linear infinite;
+		animation: rotate 4s linear;
 	}
 
 	@keyframes rotate {
@@ -73,6 +73,7 @@
 	.gallery-container .box.box-bg:hover h2 {
 		color: #fff;
 		cursor: default;
+		font-weight: bold;
 	}
 
 	section.heading h2 {
@@ -92,9 +93,14 @@
 		font-weight: bold;
 	}
 
+	
 	section.heading ol a:hover {
 		color: red;
 		font-weight: bold;
+	}
+
+	section.heading ol .text:hover::after {
+		position: absolute;
 	}
 
 	section.heading ol a:hover::before {
