fixed some css rules

--- a/FL13_HW3/homework/css/style1.css
+++ b/FL13_HW3/homework/css/style1.css
@@ -122,7 +122,7 @@ p[class*="_text"] {
       left: 271px; }
   .section .section_card_wrap {
     display: grid;
-    grid-template-row: repeat(3 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-gap: 35px; }
     .section .section_card_wrap .section_card {
       display: flex;
