--- a/FL13_HW3/homework/scss/_main.scss
+++ b/FL13_HW3/homework/scss/_main.scss
@@ -161,7 +161,7 @@ p[class*="_text"] {
 
 	.section_card_wrap {
 		display: grid;
-		grid-template-row: repeat(3 1fr);
+		grid-template-rows: repeat(3, 1fr);
 		grid-gap: 35px;
 
 		.section_card {
