--- a/FL13_HW13/homework/css/styles.css
+++ b/FL13_HW13/homework/css/styles.css
@@ -8,7 +8,7 @@ a:link, a:hover, a:active, a:visited {
 }
 
 header, section, footer {
-	padding: 20px 0;
+	padding: 30px 0;
 }
 
 .main-header__link {
@@ -56,8 +56,37 @@ header, section, footer {
 	color: #212529;
 }
 
+.all-games__item {
+	margin-bottom: 40px;
+}
+
 .all-games__img {
-	-webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
-	-moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
-	box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
+	-webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.5);
+	box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.5);
+	margin-bottom: 20px;
+}
+
+.main-footer {
+	background-color: #343A40;
+	color: #fff;
+}
+
+.main-footer__form input {
+	outline: none;
+	border: none;
+	min-width: 100%;
+	padding: 7px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+}
+
+.submit-btn {
+	color: #fff;
+	font-weight: 600;
+	background-color: #FF7F50;
+}
+
+.main-footer_copy {
+	margin: 40px 0 20px 0;
 }
