--- a/FL13_HW13/homework/css/styles.css
+++ b/FL13_HW13/homework/css/styles.css
@@ -8,11 +8,60 @@ a:link, a:hover, a:active, a:visited {
 }
 
 header, section, footer {
-<<<<<<< HEAD
 	padding: 30px 0;
-=======
-	padding: 20px 0;
->>>>>>> 387409edd947cd1faf1f8cdd3dfb07983c4e3879
+}
+
+.main-header__container {
+	flex-wrap: wrap;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: -25px;
+  right: 0;
+  width: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -10px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 10px;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+#menu__toggle:checked ~ #main_menu {
+	display: flex !important;
 }
 
 .main-header__link {
@@ -31,7 +80,7 @@ header, section, footer {
 }
 
 .hero-section .hero-section__button {
-	width: 35%;
+	width: 50%;
 	color: #fff;
 	font-weight: 600;
 	background-color: #FF7F50;
@@ -60,7 +109,6 @@ header, section, footer {
 	color: #212529;
 }
 
-<<<<<<< HEAD
 .all-games__item {
 	margin-bottom: 40px;
 }
@@ -95,10 +143,3 @@ header, section, footer {
 .main-footer_copy {
 	margin: 40px 0 20px 0;
 }
-=======
-.all-games__img {
-	-webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
-	-moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
-	box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.6);
-}
->>>>>>> 387409edd947cd1faf1f8cdd3dfb07983c4e3879
